# sphinx-autotoc

./: Makefile  README.md  __init__.py  make_indexes.py  pyproject.toml  requirements.txt
.github/workflows/: ruff_mypy_check.yaml
sphinx_autotoc/: __init__.py
tests/: test_make_indexes.py
tests/make_indexes_test_projects/3_levels_of_nesting/: conf.py
tests/make_indexes_test_projects/autosummary_test/: conf.py
tests/make_indexes_test_projects/autosummary_test/src/1. level1/: autotoc.autosummary.rst
tests/make_indexes_test_projects/autosummary_test/src/1. level1/2. level2/: autotoc.autosummary.rst
tests/make_indexes_test_projects/autosummary_test/src/1. level1/2. level2/3. level3/: autotoc.autosummary.rst
tests/make_indexes_test_projects/hidden_files/.hiddendir/: visible.rst
tests/make_indexes_test_projects/hidden_files/main/: .hidden.rst
tests/make_indexes_test_projects/no_errors/: conf.py
tests/make_indexes_test_projects/no_root/: conf.py
