[project]
name = "sphinx-autotoc"
version = "0.1"
authors = [
  { name="IRS Ural" },
]
description = "Расширение для Sphinx для создания оглавлений (TOC)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "sphinx",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/irsural/sphinx-autotoc"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
