[project]
name = "sphinx-autotoc"
version = "0.1"
authors = [
  { name="IRS Ural" },
]
description = "Расширение для Sphinx для создания оглавлений (TOC)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'alabaster==0.7.13',
    'Babel==2.14.0',
    'build==1.0.3',
    'certifi==2023.11.17',
    'charset-normalizer==3.3.2',
    'docutils==0.20.1',
    'idna==3.6',
    'imagesize==1.4.1',
    'Jinja2==3.1.2',
    'MarkupSafe==2.1.3',
    'natsort==8.4.0',
    'packaging==23.2',
    'Pygments==2.17.2',
    'pyproject_hooks==1.0.0',
    'requests==2.31.0',
    'snowballstemmer==2.2.0',
    'Sphinx==7.2.6',
    'sphinxcontrib-applehelp==1.0.7',
    'sphinxcontrib-devhelp==1.0.5',
    'sphinxcontrib-htmlhelp==2.0.4',
    'sphinxcontrib-jsmath==1.0.1',
    'sphinxcontrib-qthelp==1.0.6',
    'sphinxcontrib-serializinghtml==1.1.9',
    'tomli==2.0.1',
    'urllib3==2.1.0'
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/irsural/sphinx-autotoc"


[tool.ruff]
preview = true
line-length = 100
indent-width = 4
exclude = [
    "docs",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C901", # flake8-complexity
    "UP", # pyupgrade
    "RUF021", #  Parenthesize around `a and b` when chaining `and` and `or`
    "ISC", # flakes-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "ERA", # flake8-eradicate
    "EM", # flake8-errmsg
#    "DTZ", # flake8-datetimez
]
#                   mod    mod    object
#logger-objects = ["mylib.logger.logger"]
#logger-objects =

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"examples/*" = ["T20"]
"scripts/*" = ["T20"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = "sphinx_autotoc/__init__.py,tests/*.py"
ignore_missing_imports = "True"
strict = "True"